pkg/agenticrun/bindata/assets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-update-console-plugin
  namespace: openshift-cluster-update-console-plugin
  annotations:
    kubernetes.io/description: The OpenShift cluster-update console plugin provides a web-console interface for managing ClusterVersion updates.
spec:
  selector:
    matchLabels:
      app: cluster-update-console-plugin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v3
        openshift.io/config-hash: "${CONFIG_HASH}"
      labels:
        app: cluster-update-console-plugin
    spec:
      serviceAccountName: cluster-update-console-plugin
      automountServiceAccountToken: false
      containers:
      - name: plugin
        image: ${IMAGE}
        imagePullPolicy: IfNotPresent
        ports:
        - name: https
          containerPort: 9001
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /var/cert
          name: cluster-update-console-plugin-cert
          readOnly: true
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
          readOnly: true
          subPath: nginx.conf
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/cache/nginx
          name: cache-nginx
        - mountPath: /var/lib/nginx/tmp
          name: lib-nginx-tmp
        - mountPath: /run
          name: run
      dnsPolicy: ClusterFirst
      hostUsers: false
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/infra
        operator: Exists
      volumes:
      - name: cluster-update-console-plugin-cert
        secret:
          defaultMode: 420
          secretName: cluster-update-console-plugin-cert
      - name: nginx-conf
        configMap:
          name: cluster-update-console-plugin
          defaultMode: 420
      - name: tmp
        emptyDir: {}
      - name: cache-nginx
        emptyDir: {}
      - name: lib-nginx-tmp
        emptyDir: {}
      - name: run
        emptyDir: {}
