pkg/agenticrun/bindata/assets/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-cluster-update-console-plugin
  annotations:
    kubernetes.io/description: This NetworkPolicy is used to deny all ingress and egress traffic by default in this namespace, matching all Pods, and serving as a baseline.
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
